Add new CSS file

--- a/task.html
+++ b/task.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-Shop</title>
-  
+  <link rel="stylesheet" href="cssTask.css">
 </head>
 <body>
     test
   <header>
-    <div >LOGO</div>
+    <div class="logo">LOGO</div>
     <input type="text" placeholder="Search...">
     <nav>
       <a href="...">Home</a>
@@ -17,22 +17,23 @@
       <a href="...">Shop</a>
       <a href="..">Help</a>
     </nav>
-    <button>Your Cart</button>
+    <button class="cart-btn">Your Cart</button>
   </header>
 
-  <section >
+  <section class="hero">
     <h1>Tagline describing your e-shop</h1>
-    <button >Shop Now</button>
+    <button class="shop-now">Shop Now</button>
   </section>
 
   <section class="featured-products">
     <h2>Featured Products</h2>
-    <div>
-      <div class="product">
-        <img src="placeholder.png" alt="Product Image">
-        <p>Product Name</p>
-        <p>$300</p>
-      </div>
+    
+    <div class="product">
+        <div class="product">
+         <img src="placeholder.png" alt="Product Image">
+         <p>Product Name</p>
+          <p>$300</p>
+        </div>
       <div >
         <img src="placeholder.png" alt="Product Image">
         <p>Product Name</p>
@@ -41,7 +42,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="newsletter">
     <h2>Newsletter</h2>
     <p>Subscribe to get updates about our latest offers and products.</p>
     <div>
@@ -50,7 +51,7 @@
     </div>
   </section>
 
-  <section >
+  <section class="products-grid">
     <div >
       <img src="placeholder.png" alt="Product Image">
       <p>Product Name</p>
@@ -59,17 +60,17 @@
   
   </section>
 
-  <section >
+  <section class="hero">
     <h2>About Your Shop</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+    <p>describe the shop usinf image </p>
   </section>
 
-  <footer>
-    <div >
+  <div class="footer-info">
+   
       <p>1717 Harrison St, San Francisco, CA</p>
       <p>&copy; Your Company Name</p>
     </div>
-    <div >
+    <div class="footer-links">
       <div>Main Menu</div>
       <div>Company</div>
       <div>Discover</div>
